Pins now can be generated and users can connect to ws connection with valid pin.
